monitoring/goti-stack/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  labels:
    app: gotify
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
        netpol.cilium.io/ingress-from-ingress: "true"
        netpol.cilium.io/ingress-from-intra: "true"
    spec:
      priorityClassName: observability-critical
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      containers:
        - name: gotify
          image: gotify/server:3.1.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gotify-data
              mountPath: /app/data
          resources:
            requests:
              cpu: "1m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data-pvc
