monitoring/goti-stack/gotify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: http
      port: 80
      targetPort: 80
