monitoring/goti-stack/gotify/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gotify
  namespace: goti-stack
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Gotify
    gethomepage.dev/icon: https://raw.githubusercontent.com/gotify/logo/refs/heads/master/gotify-logo-small.png
    gethomepage.dev/href: https://gotify.tamhomelab.com
    gethomepage.dev/description: "Push Notifications Server"
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "gotify.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: gotify
          port: 80
          weight: 1
